# miio-rs

./: Cargo.toml
miio/: Cargo.toml
miio-grpc/: Cargo.toml  build.rs
miio-grpc/proto/: miio.proto
miio-grpc/src/: error.rs  handlers.rs  main.rs
miio/src/: device.rs  lib.rs  operations.rs  packets.rs  token.rs
src/: device.rs  lib.rs  operations.rs  packets.rs  token.rs
