[package]
name = "miio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
lazy_static = "1.4.0"
thiserror = "1.0.30"
bytes = "1.1.0"
openssl = "0.10.38"
anyhow = "1.0.52"
hex = "0.4.3"