[package]
name = "miio-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
log = "0.4"
env_logger = "0.9.0"
tokio = {version = "1.15.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
miio = { path="../miio" }
thiserror = "1.0.30"

[build-dependencies]
tonic-build = "0.6.2"